--- a/MyLeoRetailer/Views/PostLogin/Master/Category/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Category/Index.cshtml
@@ -40,14 +40,12 @@
                     <div class="form-group">
                         <input type="text" class="form-control" placeholder="Enter category." name="Category.Category" />
 						<input type="hidden" name="Category.Category_Id">
-                    </div>
+                    </div>  
 
-                    @*<div class="form-group" style="margin-bottom: 5px; float: right;">
-                        <label class="switch">
-                            <input  value="1" type="checkbox">
-                            <span></span>
-                        </label>
-                    </div>*@
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Enter category code." name="Category.Category_Code" /> 
+                    </div> 
+
                     <div class="form-group" style="margin-bottom: 5px; float: right;">
                         <label class="switch">
                             <input name="Category.IsActive" value="1" checked type="checkbox" id="Flag">
