--- a/MyLeoRetailer/Views/PostLogin/Master/Color/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Color/Index.cshtml
@@ -72,10 +72,13 @@
                 <h4 style="margin-top: 0px;">Create - Update color.</h4>
 
                 <form role="form" id="frmColor">
-                    <div class="form-group">
-                        @*<label>Create / Update size group:</label>*@
+                    <div class="form-group"> 
                         <input type="text" class="form-control" placeholder="Enter color name." name="Color.Colour" />
                         <input type="hidden" name="Color.Colour_Id">
+                    </div>
+
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Enter color code." name="Color.Color_Code" /> 
                     </div>
 
                     <div class="form-group">
@@ -99,6 +102,7 @@
                                 {
                                     <input value="@Model.Color.IsActive.ToString()" name="Color.IsActive" checked="checked" type="checkbox">
                                 }
+                                @*<input type="hidden" value="@Model.Color.IsActive" />*@
                                 <span></span>
                             </label>
                         </div>
