--- a/MyLeoRetailer/Views/PostLogin/Master/Product/_ProductPrizing.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Product/_ProductPrizing.cshtml
@@ -71,12 +71,19 @@
                                 int i = 0;
                                 if (Model.ProductMRPs.Count != 0)
                                 {
+                                    string Color_Ids ="",Colors="",Vendor_Codes="";
                                     foreach (var item in Model.ProductMRPs)
-                                    { 
+                                    {
                                         <a name="Color_List" class="list-group-item" href="#" id="@i" data-identity="@item.Colour_Id">@item.Colour</a>
                                         <input type="text" id="txtVendorCode_@item.Colour_Id" name="Vendor_Color_Code" value="@item.Vendor_Color_Code" placeholder="Enter vendor code." class="form-control">//
+                                        Color_Ids += item.Colour_Id + ",";
+                                        Colors += item.Colour + ",";
+                                        Vendor_Codes += item.Vendor_Color_Code + ",";                                                                                                                                                               
                                         i++;
                                     }
+                                    <input type="hidden" id="hdn_Color_Ids" name="Model.ProductMRPs" value="@(Color_Ids.TrimEnd(','))" placeholder="Enter vendor code." class="form-control"> 
+                                    <input type="hidden" id="hdn_Colors" name="Model.ProductMRPs" value="@(Colors.TrimEnd(','))" placeholder="Enter vendor code." class="form-control">//
+                                    <input type="hidden" id="hdn_Vendor_Codes" name="Model.ProductMRPs" value="@(Vendor_Codes.TrimEnd(','))" placeholder="Enter vendor code." class="form-control">//
                                 }
                             }
                         </div>
