Common method added for Send Email

--- a/MyLeoRetailer/Views/PostLogin/Master/PurchaseOrder/PrintableView.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/PurchaseOrder/PrintableView.cshtml
@@ -249,7 +249,9 @@
                                 <div class="col-md-2">
                                     <button type="button" id="btnPrint" class="btn btn-default bg-orange">Print</button>
                                 </div>
-
+                                <div class="col-md-2">
+                                    <a class="btn btn-default bg-blue" role="button" id="btnSendEmail" href="@Url.Action("SendEmail", "PurchaseOrder")">Send Email</a>
+                                </div>
                                 <div class="col-md-2">
                                     <a class="btn btn-default bg-blue" role="button" id="btnBack" href="@Url.Action("Search", "PurchaseOrder")">Back</a>
                                 </div>
