--- a/MyLeoRetailer/Views/Shared/_Menu.cshtml
+++ b/MyLeoRetailer/Views/Shared/_Menu.cshtml
@@ -18,6 +18,7 @@
                             <li><a href="/VendorContact/Search"><span class="fa fa-users"></span> Vendor Contact Management</a></li>
                             <li><a href="/Employee/Search"><span class="fa fa-user"></span> Employee Management</a></li>
                             <li><a href="/Product/Search"><span class="fa fa-users"></span> Product Management</a></li>
+                            <li><a href="/ProductWarehouse/Search"><span class="fa fa-users"></span> Product Warehouse</a></li>
                             @*<li><a href="/Replacement/Search"><span class="fa fa-users"></span> Replacement</a></li>*@ @*commented bya aditya as pre sanket instruction 26092016*@ 
                             <li><a href="/GiftVoucher/Search"><span class="fa fa-users"></span> Gift Voucher Management</a></li>
                             <li><a href="/Alteration/Search"><span class="fa fa-users"></span> Alteration Management</a></li>
