--- a/MyLeoRetailer/Views/PostLogin/Master/PurchaseInvoice/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/PurchaseInvoice/Index.cshtml
@@ -54,8 +54,8 @@
 
                                 <div class="form-group">
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">Purchase Order Date.</span>
-                                    <div class="input-group date" id="dp-2" data-date="" data-date-format="dd-mm-yyyy">                                        
-                                        <input type="text" class="form-control datepicker" name="PurchaseInvoice.Purchase_Invoice_Date" id="txtPurchase_Invoice_Date" value="@((Model.PurchaseInvoice.Purchase_Invoice_Date == DateTime.MinValue ? DateTime.Now.ToString("dd-MM-yyyy") : Model.PurchaseInvoice.Purchase_Invoice_Date.ToString("dd-MM-yyyy")))" />
+                                    <div class="input-group date" id="dp-2" data-date="" data-date-format="MM-dd-yyyy">
+                                        <input type="text" class="form-control datepicker" name="PurchaseInvoice.Purchase_Invoice_Date" id="txtPurchase_Invoice_Date" value="@((Model.PurchaseInvoice.Purchase_Invoice_Date == DateTime.MinValue ? DateTime.Now.ToString("MM-dd-yyyy") : Model.PurchaseInvoice.Purchase_Invoice_Date.ToString("MM-dd-yyyy")))" />
                                         <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                                     </div>
                                 </div>
@@ -67,9 +67,9 @@
 
                                 <div class="form-group">
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">Challan Date.</span>
-                                    <div class="input-group date" id="dp-2" data-date="" data-date-format="dd-mm-yyyy">                                       
-                                        <input type="text" class="form-control datepicker" name="PurchaseInvoice.Challan_Date" id="txtChallan_Date" value="@((Model.PurchaseInvoice.Challan_Date == DateTime.MinValue ? DateTime.Now.ToString("dd-MM-yyyy") : Model.PurchaseInvoice.Challan_Date.ToString("dd-MM-yyyy")))" />
-                                        <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>                                       
+                                    <div class="input-group date" id="dp-2" data-date="" data-date-format="MM-dd-yyyy">
+                                        <input type="text" class="form-control datepicker" name="PurchaseInvoice.Challan_Date" id="txtChallan_Date" value="@((Model.PurchaseInvoice.Challan_Date == DateTime.MinValue ? DateTime.Now.ToString("MM-dd-yyyy") : Model.PurchaseInvoice.Challan_Date.ToString("MM-dd-yyyy")))" />
+                                        <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                                     </div>
                                 </div>
                             </div>
@@ -132,8 +132,8 @@
 
                                 <div class="form-group">
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">Against Form Date.</span>
-                                    <div class="input-group date" id="dp-2" data-date="" data-date-format="dd-mm-yyyy">
-                                        <input type="text" class="form-control datepicker" name="PurchaseInvoice.Against_Form_Date" id="txtAgainst_Form_Date" value="@((Model.PurchaseInvoice.Against_Form_Date == DateTime.MinValue ? DateTime.Now.ToString("dd-MM-yyyy") : Model.PurchaseInvoice.Against_Form_Date.ToString("dd-MM-yyyy")))" />
+                                    <div class="input-group date" id="dp-2" data-date="" data-date-format="MM-dd-yyyy">
+                                        <input type="text" class="form-control datepicker" name="PurchaseInvoice.Against_Form_Date" id="txtAgainst_Form_Date" value="@((Model.PurchaseInvoice.Against_Form_Date == DateTime.MinValue ? DateTime.Now.ToString("MM-dd-yyyy") : Model.PurchaseInvoice.Against_Form_Date.ToString("MM-dd-yyyy")))" />
                                         <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                                     </div>
                                 </div>
@@ -155,7 +155,7 @@
                                 <div class="form-group">
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">Purchase Packing Date.</span>
                                     <div class="input-group date" id="dp-2" data-date="" data-date-format="dd-mm-yyyy">
-                                        <input type="text" class="form-control datepicker" name="PurchaseInvoice.Purchase_Packing_Date" id="txtPurchase_Packing_Date" value="@((Model.PurchaseInvoice.Purchase_Packing_Date == DateTime.MinValue ? DateTime.Now.ToString("dd-MM-yyyy") : Model.PurchaseInvoice.Purchase_Packing_Date.ToString("dd-MM-yyyy")))" />
+                                        <input type="text" class="form-control datepicker" name="PurchaseInvoice.Purchase_Packing_Date" id="txtPurchase_Packing_Date" value="@((Model.PurchaseInvoice.Purchase_Packing_Date == DateTime.MinValue ? DateTime.Now.ToString("MM-dd-yyyy") : Model.PurchaseInvoice.Purchase_Packing_Date.ToString("MM-dd-yyyy")))" />
                                         <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                                     </div>
                                 </div>
@@ -441,8 +441,8 @@
 
                                 <div class="form-group col-md-3">
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">Payment Due Date.</span>
-                                    <div class="input-group date" id="dp-2" data-date="" data-date-format="dd-mm-yyyy">
-                                        <input type="text" class="form-control datepicker" name="PurchaseInvoice.Payment_Due_Date" id="txtPayment_Due_Date" value="@((Model.PurchaseInvoice.Payment_Due_Date == DateTime.MinValue ? DateTime.Now.ToString("dd-MM-yyyy") : Model.PurchaseInvoice.Payment_Due_Date.ToString("dd-MM-yyyy")))" />
+                                    <div class="input-group date" id="dp-2" data-date="" data-date-format="MM-dd-yyyy">
+                                        <input type="text" class="form-control datepicker" name="PurchaseInvoice.Payment_Due_Date" id="txtPayment_Due_Date" value="@((Model.PurchaseInvoice.Payment_Due_Date == DateTime.MinValue ? DateTime.Now.ToString("MM-dd-yyyy") : Model.PurchaseInvoice.Payment_Due_Date.ToString("MM-dd-yyyy")))" />
                                         <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                                     </div>
                                 </div>
@@ -487,8 +487,8 @@
 
                                 <div class="form-group col-md-3">
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">LR Date.</span>
-                                    <div class="input-group date" id="dp-2" data-date="" data-date-format="dd-mm-yyyy">
-                                        <input type="text" class="form-control datepicker" name="PurchaseInvoice.Lr_Date" id="txtLr_Date" value="@((Model.PurchaseInvoice.Lr_Date == DateTime.MinValue ? DateTime.Now.ToString("dd-MM-yyyy") : Model.PurchaseInvoice.Lr_Date.ToString("dd-MM-yyyy")))" />
+                                    <div class="input-group date" id="dp-2" data-date="" data-date-format="MM-dd-yyyy">
+                                        <input type="text" class="form-control datepicker" name="PurchaseInvoice.Lr_Date" id="txtLr_Date" value="@((Model.PurchaseInvoice.Lr_Date == DateTime.MinValue ? DateTime.Now.ToString("MM-dd-yyyy") : Model.PurchaseInvoice.Lr_Date.ToString("MM-dd-yyyy")))" />
                                         <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                                     </div>
                                 </div>
