fixed Bugs Duplicate check on Size,Tax,Brand,Colour,Category

--- a/MyLeoRetailer/Views/PostLogin/Master/Brand/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Brand/Index.cshtml
@@ -43,7 +43,7 @@
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Brand name.</span>
                         @*<input type="text" class="form-control" placeholder="Enter brand." name="Brand.Brand_Name" />*@@*Commented By Vinod mane on 26/09/2016*@
                         <input type="text" class="form-control" placeholder="Enter brand." name="Brand.Brand_Name" id="txtBrand_Name" />@*Added By Vinod mane on 26/09/2016*@
-                        <input type="text" id="hdnBrand_Name">
+                        <input type="hidden" id="hdnBrand_Name">
                         <input type="hidden" name="Brand.Brand_Id">
                     </div>
 
