--- a/MyLeoRetailer/Views/PostLogin/Master/Color/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Color/Index.cshtml
@@ -77,7 +77,7 @@
                         @*<label>Create / Update size group:</label>*@
                         <input type="text" class="form-control" id="txtColour_Name" placeholder="Enter color name." name="Color.Colour" />
                         <input type="hidden" id="hdnColour_Name">@*Added By Vinod Mane on 23/09/2016*@
-                        <input type="text" class="form-control" placeholder="Enter color name." name="Color.Colour" />
+                        @*<input type="text" class="form-control" placeholder="Enter color name." name="Color.Colour" />*@
                         <input type="hidden" name="Color.Colour_Id">
                     </div>
 
