--- a/MyLeoRetailer/Views/PostLogin/Master/Size/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Size/Index.cshtml
@@ -44,7 +44,8 @@
                 <form id="frmSizeGroup">@*role="form"*@ 
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Size Group</span>
-                        <input type="text" class="form-control" placeholder="Enter size group." name="SizeGroup.Size_Group_Name" />
+                        <input type="text" class="form-control" placeholder="Enter size group." name="SizeGroup.Size_Group_Name" id="txtSize_Group_Name"/>
+                        <input type="hidden" id="hdnSizeGroupName">@*Added by Vinod Mane on 27/09/2016*@
                         <input type="hidden" name="SizeGroup.Size_Group_Id" id="hdnSizeGroupID">
                     </div>
 
