--- a/MyLeoRetailer/Views/PostLogin/Master/Tax/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Tax/Index.cshtml
@@ -72,7 +72,8 @@
             <form role="form" id="frmTax">
                 <div class="form-group">
                     <span class="label label-primary label-form" style="margin-bottom: 1px;">Tax name</span>
-                    <input type="text" class="form-control" placeholder="Enter tax name." name="Tax.Tax_Name" />
+                    <input type="text" class="form-control" placeholder="Enter tax name." name="Tax.Tax_Name" id="txt_Tax_Name"/>
+                    <input type="hidden" id="hdnTaxName">
                     <input type="hidden" name="Tax.Tax_Id">
                 </div>
 
