--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseInvoice/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseInvoice/Index.cshtml
@@ -1,8 +1,8 @@
-﻿@model MyLeoRetailer.Models.PurchaseInvoiceViewModel
+﻿@model MyLeoRetailer.Models.Transaction.PurchaseInvoiceViewModel
 
+<script src="~/Scripts/Modules/PurchaseInvoice/purchaseinvoice_validation.js"></script>
 <script src="~/Scripts/Modules/PurchaseInvoice/purchaseinvoice_events.js"></script>
 <script src="~/Scripts/Modules/PurchaseInvoice/purchaseinvoice_methods.js"></script>
-<script src="~/Scripts/Modules/PurchaseInvoice/purchaseinvoice_validation.js"></script>
 <script src="~/Scripts/Modules/common_methods.js"></script>
 
 <!-- START BREADCRUMB -->
