--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrderRequest/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrderRequest/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyLeoRetailer.Models.PurchaseOrderRequestViewModel
+﻿@model MyLeoRetailer.Models.Transaction.PurchaseOrderRequestViewModel
 
 <script src="~/Scripts/Modules/PurchaseOrderRequest/purchaseorderrequest_events.js"></script>
 <script src="~/Scripts/Modules/PurchaseOrderRequest/purchaseorderrequest_methods.js"></script>
