--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyLeoRetailer.Models.PurchaseReturnViewModel
+﻿@model MyLeoRetailer.Models.Transaction.PurchaseReturnViewModel
 
 <script src="~/Scripts/Modules/PurchaseReturn/purchasereturn_events.js"></script>
 <script src="~/Scripts/Modules/PurchaseReturn/purchasereturn_methods.js"></script>
