--- a/MyLeoRetailer/Views/Shared/_Layout.cshtml
+++ b/MyLeoRetailer/Views/Shared/_Layout.cshtml
@@ -131,7 +131,7 @@
         <!-- END PRELOADS -->    
         @{
             LoginInfo cookies = new LoginInfo();
-            cookies = Utility.Get_Login_User("MyLeoLoginInfo", "MyLeoToken", "Branch_Ids");
+            //cookies = Utility.Get_Login_User("MyLeoLoginInfo", "MyLeoToken", "Branch_Ids");
 
             <input type="hidden" id="hdnCookiesBranches" name="CookiesBranches" value="@cookies.Branch_Ids"/>
         }
