--- a/MyLeoRetailer/Views/Shared/_Menu.cshtml
+++ b/MyLeoRetailer/Views/Shared/_Menu.cshtml
@@ -20,12 +20,9 @@
                             <li><a href="/Product/Search"><span class="fa fa-users"></span> Product Management</a></li>
                             <li><a href="/GiftVoucher/Search"><span class="fa fa-users"></span> Gift Voucher Management</a></li>
                             <li><a href="/Alteration/Search"><span class="fa fa-users"></span> Alteration Management</a></li>
-                            <li><a href="/Payable/Index"><span class="fa fa-users"></span>Payable</a></li>
-                            <li><a href="/PurchaseOrder/Search"><span class="fa fa-users"></span> Purchase Order Management</a></li>
-                            <li><a href="/PurchaseInvoice/Search"><span class="fa fa-users"></span> Purchase Invoice Management</a></li>
+                            <li><a href="/Payable/Index"><span class="fa fa-users"></span>Payable</a></li>                           
                             <li><a href="/Receivable/Index"><span class="fa fa-users"></span>Receivable</a></li>
-                            <li><a href="/PurchaseReturn/Search"><span class="fa fa-users"></span> Purchase Return Management</a></li>
-                            <li><a href="/PurchaseOrderRequest/Search"><span class="fa fa-users"></span> Purchase Order Request Management</a></li>
+                           
 
                             <li><a href="/Vendor/Search"><span class="fa fa-users"></span> Vendor Management</a></li>
                             <li class="xn-openable">
@@ -136,9 +133,13 @@
     <li class="xn-openable">
         <a href="#"><span class="fa fa-files-o"></span> <span class="xn-text">Transactions</span></a>
         <ul class="animated zoomIn">
-            <li><a href="/SalesOrder/Search"><span class="fa fa-image"></span> Sales Invoice</a></li>
+            <li><a href="/PurchaseOrder/Search"><span class="fa fa-users"></span> Purchase Order </a></li>
+            <li><a href="/PurchaseOrderRequest/Search"><span class="fa fa-users"></span> Purchase Order Request </a></li>
+            <li><a href="/PurchaseReturn/Search"><span class="fa fa-users"></span> Purchase Return </a></li>
+            <li><a href="/purchase-return-request/get-purchase-return-request"><span class="fa fa-users"></span> Purchase Return Request</a></li>
+            <li><a href="/PurchaseInvoice/Search"><span class="fa fa-users"></span> Purchase Invoice </a></li>
+            <li><a href="/SalesOrder/Search"><span class="fa fa-users"></span> Sales Invoice</a></li>
             <li><a href="/SalesReturn/Search"><span class="fa fa-users"></span> Sales Return </a></li>
-            <li><a href="/purchase-return-request/get-purchase-return-request"><span class="fa fa-image"></span> Purchase Return Request</a></li>
 
         </ul>
     </li>
