--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyLeoRetailer.Models.PurchaseOrderViewModel
+﻿@model MyLeoRetailer.Models.Transaction.PurchaseOrderViewModel
 
 <script src="~/Scripts/Modules/PurchaseOrder/purchaseorder_events.js"></script>
 <script src="~/Scripts/Modules/PurchaseOrder/purchaseorder_methods.js"></script>
