--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Index.cshtml
@@ -256,6 +256,22 @@
                     </div>
                 </div>
             </div>
+
+            <div class="col-md-3" hidden>
+
+                <div class="block" >
+
+                    <!-- This should be an auto complete field / lookup field like Krypton with search filter / dropdown field -->
+                    <div class="form-group">
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Color.</span>
+                        <select class="form-control select" id="drpColor" name="PurchaseOrder.Colour_Id">
+                            <option value="">Select Color</option>                           
+                        </select>
+                    </div>
+
+                </div>
+
+            </div>
         </div>
 
         <div class="row Details">
