--- a/MyLeoRetailer/Views/PostLogin/Master/Employee/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Employee/Index.cshtml
@@ -22,9 +22,13 @@
         <div class="page-title">
             <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Employee Management</h2>
         </div>
+       
+        <button class="btn btn-danger pull-right" onclick="location.href='@Url.Action("Search", "Employee")'"><i class="fa fa-angle-double-left"></i> BACK</button>
+        
+
     </div>
 
-</div>
+    </div>
 <!-- END CONTENT FRAME -->
 
 <div class="page-content-wrap">
