--- a/MyLeoRetailer/Views/PostLogin/Master/Customer/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Customer/Index.cshtml
@@ -35,7 +35,7 @@
 
     <form role="form" id="frmCustomer">
 
-        <input type="text" id="hdnCreateCustomerFlag" name="Customer.CreateCustomerFlag" value="@Model.Customer.CreateCustomerFlag.ToString()">
+        <input type="hidden" id="hdnCreateCustomerFlag" name="Customer.CreateCustomerFlag" value="@Model.Customer.CreateCustomerFlag.ToString()">
 
 
 
@@ -64,16 +64,18 @@
                     
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">First name.</span>
-                        <input type="text" class="form-control" placeholder="Enter customer first name." name="Customer.First_Name" value="@Model.Customer.First_Name" />
+                        <input type="text" class="form-control" placeholder="Enter customer first name." name="Customer.First_Name" value="@Model.Customer.First_Name" id="txtFirstName" />
                         <input type="hidden" name="Customer.Customer_Id" value="@Model.Customer.Customer_Id" />
                         <input type="hidden" name="Customer.Customer_Name" value="@Model.Customer.Customer_Name" />
+                        <input type="hidden" id="hdnFirstName" value="@Model.Customer.Customer_Name" />@*Added by vinod mane on 28/09/2016*@
                         @*<input type="hidden" name="Customer.IsActive" value="@Model.Customer.IsActive" />*@ @*Commented By Vinod Mane on 23/09/2016*@
+
                     </div>
 
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Last name.</span>
-                        <input type="text" class="form-control" placeholder="Enter customer last name." name="Customer.Last_Name" value="@Model.Customer.Last_Name" />
-
+                        <input type="text" class="form-control" placeholder="Enter customer last name." name="Customer.Last_Name" value="@Model.Customer.Last_Name" id="txtLastName"/>
+                        <input type="hidden" id="hdnLast_Name" value="@Model.Customer.Last_Name"/> @*Added by vinod mane on 28/09/2016*@
                     </div>
 
                     <div class="form-group">
