--- a/MyLeoRetailer/Views/PostLogin/Master/Alteration/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Alteration/Search.cshtml
@@ -51,11 +51,27 @@
 
                         <div class="col-md-5">
 
-                            <div class="form-group">
+                            @*<div class="form-group">
                                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Mobile no</span>
                                 <input type="text" class="form-control" name="Filter.Customer_Mobile_No" placeholder="Enter customer mobile number to search." />
                                 <input type="hidden" id="hdnAlteration_ID" name="Alteration.Alteration_ID" value="@Model.Alteration.Alteration_ID">
+                            </div>*@
+                            @* LookUp Code Added by Vinod Mane on 28/09/2016*@
+
+                            <span class="label label-primary label-form" style="margin-bottom: 1px;">Mobile no</span>@* Added by Vinod mane on 19/09/2016*@
+
+                            <div class="form-group auto-complete">
+                                <div class="input-group">
+
+                                    <input type="text" class="form-control color-filter autocomplete-text" name="Filter.Customer_Mobile_No" id="txtCustomer_Mobile_No" placeholder="Enter customer mobile number to search." data-table="Alteration" data-col="Alteration_ID,Customer_Mobile_No" data-headernames="Alteration No..">
+                                    <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
+                                    @*<input type="hidden" name="Filter.Vendor_Id" id="hdnVendorID">*@
+                                    <input type="hidden" id="hdnAlteration_ID" name="Alteration.Alteration_ID" value="@Model.Alteration.Alteration_ID">
+                                    <input type="hidden" id="hdnCustomer_Mobile_No" value="" name="Filter.Customer_Mobile_No" class="auto-complete-value" />
+
+                                </div>
                             </div>
+                            @*End*@
 
                         </div>
 
