--- a/MyLeoRetailer/Views/PostLogin/Master/Category/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Category/Index.cshtml
@@ -72,7 +72,7 @@
                 @* LookUp Code Added by Vinod Mane on 22/09/2016*@
                 <div class="form-group auto-complete">                   
                     <div class="input-group">
-                        <input type="text" class="form-control color-filter autocomplete-text" name="Filter.Category" id="txtCategory" placeholder="Enter category to search." data-table="Category" data-col="Category_Id,Category" data-headernames="Category">
+                        <input type="text" class="form-control color-filter autocomplete-text" name="Filter.Category" id="txtCategory_name" placeholder="Enter category to search." data-table="Category" data-col="Category_Id,Category" data-headernames="Category">
                         <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
                         <input type="hidden" id="hdnCategory" value="" name="Filter.Category" class="auto-complete-value" />
 
