--- a/MyLeoRetailer/Views/PostLogin/Master/GiftVoucher/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/GiftVoucher/Index.cshtml
@@ -35,7 +35,7 @@
     <form role="form" id="frmGiftVoucher">
         <div class="row">
 
-                <div class="col-md-4" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 250px;">
+                <div class="col-md-4" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 325px;">
 
                     <div class="block">
                         <h4 style="margin-top: 0px;">Voucher information.</h4>
@@ -55,7 +55,7 @@
 
                 </div>
 
-                <div class="col-md-4" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 250px;">
+                <div class="col-md-4" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 325px;">
 
                     <div class="block">
                         <h4 style="margin-top: 0px;">Date detail.</h4>
@@ -63,7 +63,7 @@
                         <div class="form-group">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Voucher date.</span>
                             <div class="input-group date" id="dp-2" data-date="" data-date-format="dd-mm-yyyy">
-                                <input type="text" class="form-control datepicker" name="GiftVoucher.Gift_Voucher_Date" value="@((Model.GiftVoucher.Gift_Voucher_Date == DateTime.MinValue ? "" : Model.GiftVoucher.Gift_Voucher_Date.ToString("dd-MM-yyyy")))" reado readonly />
+                                <input type="text" class="form-control datepicker" placeholder="Voucher date." name="GiftVoucher.Gift_Voucher_Date" value="@((Model.GiftVoucher.Gift_Voucher_Date == DateTime.MinValue ? "" : Model.GiftVoucher.Gift_Voucher_Date.ToString("dd-MM-yyyy")))" reado readonly />
                                 <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                             </div>
                         </div>  
@@ -72,7 +72,7 @@
                         <div class="form-group">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Voucher expiry date</span>
                             <div class="input-group date" id="dp-2" data-date="" data-date-format="dd-mm-yyyy">
-                                <input type="text" class="form-control datepicker" name="GiftVoucher.Gift_Voucher_Expiry_Date" value="@((Model.GiftVoucher.Gift_Voucher_Expiry_Date == DateTime.MinValue ? "" : Model.GiftVoucher.Gift_Voucher_Expiry_Date.ToString("dd-MM-yyyy")))" reado readonly />
+                                <input type="text" class="form-control datepicker" placeholder="Voucher expiry date." name="GiftVoucher.Gift_Voucher_Expiry_Date" value="@((Model.GiftVoucher.Gift_Voucher_Expiry_Date == DateTime.MinValue ? "" : Model.GiftVoucher.Gift_Voucher_Expiry_Date.ToString("dd-MM-yyyy")))" reado readonly />
                                 <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                             </div>
                         </div>  
@@ -81,7 +81,7 @@
 
                 </div>
 
-                <div class="col-md-4" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 250px;">
+                <div class="col-md-4" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 325px;">
 
                     <div class="block">
                         <h4 style="margin-top: 0px;">Amount detail.</h4>
@@ -90,7 +90,6 @@
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Voucher amount</span>
                             <input type="text" class="form-control" placeholder="Enter voucher amount." name="GiftVoucher.Gift_Voucher_Amount" value="@(Model.GiftVoucher.Gift_Voucher_Amount == 0 ? "" : Model.GiftVoucher.Gift_Voucher_Amount.ToString())" />
                         </div>
-
 
                         <div class="form-group">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Payment mode</span>
@@ -108,8 +107,6 @@
                                 }
                             </select>
                         </div>
-
-
 
                         <div class="form-group" id="divBankName">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Bank name</span>
